--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
   --icon-color:#AFB1B8;
   --portfolio-img: #EEEEEE;
 }
+
+
+
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--primery-text-color);
@@ -297,9 +300,9 @@ margin-top: 30px;
   margin: auto;
   box-sizing: content-box;
 }
-.img-doing:not(:last-child) {
+/* .img-doing:not(:last-child) {
   padding-right: 30px;
-}
+} */
 .padding-zero {
   padding-top: 0px;
   padding-bottom: 94px;
@@ -316,8 +319,65 @@ margin-top: 30px;
 
   color: var(--title-text-color);
 }
+
+.stud-size{
+ position: relative;
+ /* overflow: hidden; */
+}
 .stud-size:not(:last-child) {
   margin-right: 30px;
+}
+
+
+.stud-div{ 
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+width: 100%;
+  height: 70px;
+  position: absolute;
+  top: 100%;
+ left: 50%;
+  transform: translate(-50%,0%);
+ opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+.studies-pup-up::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  top: 100%;
+  background: rgba(47, 48, 58, 0.8);
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studies-pup-up:hover::before {
+  opacity: 1;
+  transform: translateY(-100%);
+}
+.stud-text{
+  font-weight: 700;
+    line-height: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    color: red;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
+}
+.stud-text:hover {
+  opacity: 1;
+  transform: translateY(-250%);
+}
+.hz{
+  width: 370px;
+  height: 70px;
+  position: absolute;
+    top: 100%;
+    /* opacity: 0; */
+   
 }
 /* <======================/STUDIES==========================> */
 /* <======================TEAMS==========================> */
@@ -550,6 +610,7 @@ margin-right: 10px;}
   fill: var(--icon-color);
   border: 1px solid var(--icon-color);
   border-radius: 4px;
+  
 }
 .customer-logo{
   width: 106px;
@@ -559,6 +620,7 @@ margin-right: 10px;}
 .customer-btn:focus{
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
+  
 }
 
 .footer-dark-list{
@@ -588,6 +650,7 @@ margin-right: 10px;}
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
     color: var(--background-color);
+
 
 }
 .social-item-footer:hover,
