--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,6 @@
   --icon-color:#AFB1B8;
   --portfolio-img: #EEEEEE;
 }
-
-
-
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--primery-text-color);
@@ -300,9 +297,9 @@ margin-top: 30px;
   margin: auto;
   box-sizing: content-box;
 }
-/* .img-doing:not(:last-child) {
+.img-doing:not(:last-child) {
   padding-right: 30px;
-} */
+}
 .padding-zero {
   padding-top: 0px;
   padding-bottom: 94px;
@@ -315,69 +312,11 @@ margin-top: 30px;
   line-height: 1.16;
   text-align: center;
   margin-bottom: 50px;
-  margin-top: 50px;
 
   color: var(--title-text-color);
 }
-
-.stud-size{
- position: relative;
- /* overflow: hidden; */
-}
 .stud-size:not(:last-child) {
   margin-right: 30px;
-}
-
-
-.stud-div{ 
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-width: 100%;
-  height: 70px;
-  position: absolute;
-  top: 100%;
- left: 50%;
-  transform: translate(-50%,0%);
- opacity: 0;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-}
-
-.studies-pup-up::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  top: 100%;
-  background: rgba(47, 48, 58, 0.8);
-  opacity: 0;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.studies-pup-up:hover::before {
-  opacity: 1;
-  transform: translateY(-100%);
-}
-.stud-text{
-  font-weight: 700;
-    line-height: 16px;
-    text-align: center;
-    text-transform: uppercase;
-    color: red;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-     
-}
-.stud-text:hover {
-  opacity: 1;
-  transform: translateY(-250%);
-}
-.hz{
-  width: 370px;
-  height: 70px;
-  position: absolute;
-    top: 100%;
-    /* opacity: 0; */
-   
 }
 /* <======================/STUDIES==========================> */
 /* <======================TEAMS==========================> */
@@ -400,7 +339,6 @@ width: 100%;
   line-height: 1.18;
   text-align: center;
   margin-bottom: 10px;
-  margin-top: 30px;
 
   color: var(--title-text-color);
 }
@@ -424,11 +362,11 @@ width: 100%;
   margin-right: 30px;
 }
 .team-box-color {
-  /* background-color: var(--background-color);
-  border-radius: 0px 0px 4px 4px;
+  
+  /* border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);; */
-  /* padding-top: 30px; */
   padding-bottom: 30px;
+  padding-top: 30px;
 }
 /* <=======================/TEAM=========================> */
 /* <======================FOOTER==========================> */
@@ -597,48 +535,55 @@ margin-right: 10px;}
   display: flex;
   
 }
-.regular-customer-item{
+.regular-customer-item:not(:last-child)
+{
   margin-right: 30px;
 }
 .customer-btn{
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 170px;
   height: 92px;
-  padding: 16px 32px;
   cursor: pointer;
-  background-color: var(--background-color);
-  fill: var(--icon-color);
+  /* background-color: var(--background-color); */
+  color: var(--icon-color);
   border: 1px solid var(--icon-color);
   border-radius: 4px;
-  
 }
 .customer-logo{
   width: 106px;
   height: 60px;
+  fill: currentColor;
 }
 .customer-btn:hover,
 .customer-btn:focus{
-  fill: var(--accent-color);
-  border: 1px solid var(--accent-color);
-  
+  color: var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .footer-dark-list{
-  display: flex;
-    flex-direction: column;
-    padding-top: 15px;
     margin-left: 70px;
+    
 }
 
 .footer-flex{
   display: flex;
+  align-items: baseline;
 }
 
 
 .footer-tex{
-  color: var(--background-color);
+
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-transform: uppercase;
+
+color: var(--background-color);
+
 }
-.social-item-margin:not(:last-child) {
+.social-item-distance:not(:last-child) {
   margin-right: 10px;
 }
 .social-item-footer{
@@ -651,7 +596,6 @@ margin-right: 10px;}
     background: rgba(255, 255, 255, 0.1);
     color: var(--background-color);
 
-
 }
 .social-item-footer:hover,
 .social-item-footer:focus{
@@ -663,4 +607,10 @@ margin-right: 10px;}
   width: 20px;
     height: 20px;
     fill: currentColor;
+}
+.social-footer-links{
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-top: 20px;
 }
