--- a/css/styles.css
+++ b/css/styles.css
@@ -417,10 +417,63 @@ margin-top: 30px;
 .li-size{
 display: block;
 }
-.li-size:hover,
-.li-size:focus {
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
+
+.li-position{
+overflow: hidden;
+  
 }
+.li-position:hover .qqq {
+  opacity: 1;
+}
+.li-position:hover,
+.li-position:focus{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.www{
+  position: relative;
+}
+.overlay::before{
+  display: inline-block;
+  content: "";
+
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+
+  transform: translateY(100%);
+  transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.li-position:hover .overlay::before {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.qqq{
+ 
+  content: "";
+  position: absolute;
+  width: 322px;
+  height: 168px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: var(--background-color);
+font-size: 18px;
+line-height: 1.55;
+opacity: 0;
+
+}
+/* .qqq:hover,
+.qqq:focus{
+  opacity: 1;
+} */
+
 /* <======================/PORTFOLIO==========================> */
 
 
@@ -428,10 +481,13 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  
 }
+
+
 .portfolio-img {
  padding: 20px 24px;
-border: 1px solid var(--portfolio-img);
+ border: 1px solid var(--portfolio-img);
 }
 .bgd-img{
   height: 600px;
@@ -610,7 +666,5 @@ color: var(--background-color);
 }
 .social-footer-links{
   display: flex;
-  justify-content: center;
-  padding: 0;
   margin-top: 20px;
 }
