--- a/css/styles.css
+++ b/css/styles.css
@@ -431,9 +431,11 @@ overflow: hidden;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.www{
+.position{
   position: relative;
+
 }
+
 .overlay::before{
   display: inline-block;
   content: "";
@@ -444,35 +446,43 @@ overflow: hidden;
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
+  /* opacity: 0; */
 
-  transform: translateY(100%);
+  transform: translateY(140%);
+
+  
   transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
 }
 .li-position:hover .overlay::before {
-  opacity: 1;
+  /* opacity: 1; */
   transform: translateY(0);
 }
 
-.qqq{
- 
+.context{
+font-size: 18px;
+line-height: 1.55;
+
+
+}
+
+.shadow{
   content: "";
   position: absolute;
   width: 322px;
   height: 168px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,155%);
   color: var(--background-color);
-font-size: 18px;
-line-height: 1.55;
-opacity: 0;
-
+transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+/* opacity: 0; */
 }
-/* .qqq:hover,
-.qqq:focus{
-  opacity: 1;
-} */
+.li-position:hover .shadow {
+  transform: translate(-50%, -50%);
+  /* opacity: 1; */
+}
 
 /* <======================/PORTFOLIO==========================> */
 
@@ -488,6 +498,9 @@ opacity: 0;
 .portfolio-img {
  padding: 20px 24px;
  border: 1px solid var(--portfolio-img);
+ /* position: absolute;  */
+ 
+ 
 }
 .bgd-img{
   height: 600px;
