--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ button {
   color: var(--accent-color);
 }
 .menu-item {
+  position: relative;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -206,6 +207,16 @@ display: flex;
   line-height: 1.87;
   color: var(--primery-text-color);
 }
+.menu-item > .current::before{
+  content: '';
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    transform: translateY(35px);
+    bottom: 0;
+    background: var(--accent-color);
+    border-radius: 2px;
+}
 /* <======================/HEADER==========================>  */
 /* <======================HERO==========================> */
 .hero {
@@ -261,6 +272,51 @@ display: flex;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal{
+  width: 528px ;
+  height: 581px;
+  background-color: var(--background-color);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 15px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: var(--basic-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.close-icon{
+  background-image: url(../images/close.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 /* <======================/HERO==========================> */
 /* <======================Benefits==========================> */
@@ -318,6 +374,44 @@ margin-top: 30px;
 .stud-size:not(:last-child) {
   margin-right: 30px;
 }
+.stud-size{
+  position: relative;
+  overflow: hidden;
+  /* overflow: hidden; */
+}
+
+/* .stud-made::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  top: 100%;
+  background: rgba(47, 48, 58, 0.8);
+  transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+} */
+
+.stud-text{
+position: absolute;
+width: 370px ;
+height: 70px;
+top: 100%;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+text-align: center;
+text-transform: uppercase;
+padding-top: 27px;
+color: var(--background-color);
+background: rgba(47, 48, 58, 0.8);
+transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.stud-size:hover .stud-text{
+  transform: translateY(-100%);
+}
+
 /* <======================/STUDIES==========================> */
 /* <======================TEAMS==========================> */
 .perfuse {
@@ -449,11 +543,7 @@ overflow: hidden;
   /* opacity: 0; */
 
   transform: translateY(140%);
-
-  
   transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
 }
 .li-position:hover .overlay::before {
   /* opacity: 1; */
