--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --background-hero: #2f303a;
   --icon-color:#AFB1B8;
   --portfolio-img: #EEEEEE;
+  --cubik: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
   font-family: 'Roboto', sans-serif;
@@ -120,6 +121,9 @@ button {
   letter-spacing: 0.02em;
 
   color: var(--title-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 .menu-link:hover,
 .menu-link:focus {
@@ -147,6 +151,9 @@ button {
 display: flex;
 align-items: center;
   color: var(--primery-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 .contact-item:not(:last-child) {
   margin-right: 50px;
@@ -162,6 +169,9 @@ align-items: center;
 display: flex;
   align-items: center;
   color: var(--primery-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 .contact-phone:hover,
 .contact-phone:focus {
@@ -184,6 +194,9 @@ display: flex;
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
+  transition-property:color,background-color,box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -255,10 +268,16 @@ display: flex;
 
   color: var(--background-color);
   background-color: var(--accent-color);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--hover-focus-btn);
+  
+  
 }
 .visually-hidden {
   position: absolute;
@@ -279,12 +298,18 @@ display: flex;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
   background: rgba(0, 0, 0, 0.2);
+  transition-property: opacity 1;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
+ 
 }
 
 .backdrop.is-hidden{
   opacity: 0;
   pointer-events: none;
+  
 }
 
 .modal{
@@ -298,6 +323,7 @@ display: flex;
   padding: 15px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  
 }
 .modal-btn{
   display: flex;
@@ -377,32 +403,22 @@ margin-top: 30px;
 .stud-size{
   position: relative;
   overflow: hidden;
-  /* overflow: hidden; */
+ 
 }
 
-/* .stud-made::before{
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  top: 100%;
-  background: rgba(47, 48, 58, 0.8);
-  transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-} */
 
 .stud-text{
 position: absolute;
-width: 370px ;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
 height: 70px;
 top: 100%;
 font-weight: 700;
-font-size: 14px;
 line-height: 16px;
 text-align: center;
 text-transform: uppercase;
-padding-top: 27px;
 color: var(--background-color);
 background: rgba(47, 48, 58, 0.8);
 transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -470,6 +486,9 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   line-height: 1.71;
 
   color: var(--background-color);
+  transition-property: color,;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 .maps:hover,
 .maps:focus {
@@ -495,6 +514,9 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   letter-spacing: 0.02em;
 
   color: var(--primery-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 .contact-footer:hover,
 .contact-footer:focus {
@@ -509,17 +531,20 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   justify-content: center;
 }
 .li-size{
-display: block;
+display: block;  
+
 }
 
 
 .li-position{
 overflow: hidden;
+
+
   
 }
-.li-position:hover .qqq {
+/* .li-position:hover .qqq {
   opacity: 1;
-}
+} */
 .li-position:hover,
 .li-position:focus{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -527,6 +552,7 @@ overflow: hidden;
 
 .position{
   position: relative;
+ overflow: hidden;
 
 }
 
@@ -540,19 +566,23 @@ overflow: hidden;
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  /* opacity: 0; */
+
 
   transform: translateY(140%);
   transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.li-position:hover .overlay::before {
-  /* opacity: 1; */
+.li-position:hover .overlay::before,
+.li-position:focus .overlay::before {
+  
   transform: translateY(0);
 }
+
+
 
 .context{
 font-size: 18px;
 line-height: 1.55;
+
 
 
 }
@@ -651,6 +681,8 @@ background-color: var(--perfuse-color);
   padding: 0;
   margin-top: 16px;
 }
+
+
 .social-link{
   display: flex;
   justify-content: center;
@@ -660,6 +692,9 @@ background-color: var(--perfuse-color);
   border-radius: 50%;
   
   color: var(--icon-color);
+  transition-property: color,background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 
 .social-item:not(:last-child){
@@ -704,7 +739,6 @@ margin-right: 10px;}
   align-items: center;
   width: 170px;
   height: 92px;
-  cursor: pointer;
   /* background-color: var(--background-color); */
   color: var(--icon-color);
   border: 1px solid var(--icon-color);
@@ -714,6 +748,9 @@ margin-right: 10px;}
   width: 106px;
   height: 60px;
   fill: currentColor;
+  transition-property: color,border;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
 .customer-btn:hover,
 .customer-btn:focus{
@@ -754,6 +791,9 @@ color: var(--background-color);
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
     color: var(--background-color);
+    transition-property:background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 
 }
 .social-item-footer:hover,
@@ -766,8 +806,10 @@ color: var(--background-color);
   width: 20px;
     height: 20px;
     fill: currentColor;
+    
 }
 .social-footer-links{
   display: flex;
   margin-top: 20px;
+  
 }
