--- a/css/styles.css
+++ b/css/styles.css
@@ -424,7 +424,8 @@ background: rgba(47, 48, 58, 0.8);
 transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.stud-size:hover .stud-text{
+.stud-size:hover .stud-text,
+.stud-size:focus .stud-text{
   transform: translateY(-100%);
 }
 
