--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
   background-color: var(--background-color);
   font-size: 14px;
   letter-spacing: 0.03em;
+  padding-top: 80px;
 }
 
 h1,
@@ -69,10 +70,15 @@ button {
 
 /* <======================COMPONENTS==========================> */
 .pages-header {
-  
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1;
    padding-top: 24px;
   padding-bottom: 24px; 
   border-bottom: 1px solid #ececec;
+  max-height: 80px;
+  background: var(--background-color);
 }
 .page-header-container {
   display: flex;
@@ -225,7 +231,7 @@ display: flex;
     width: 100%;
     height: 4px;
     position: absolute;
-    transform: translateY(35px);
+    transform: translateY(30px);
     bottom: 0;
     background: var(--accent-color);
     border-radius: 2px;
@@ -402,9 +408,15 @@ margin-top: 30px;
 }
 .stud-size{
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
  
 }
+.stud-made:hover .stud-text,
+.stud-made:focus .stud-text {
+  transform: translateY(-100%);
+}
+
+
 
 
 .stud-text{
@@ -424,10 +436,7 @@ background: rgba(47, 48, 58, 0.8);
 transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.stud-size:hover .stud-text,
-.stud-size:focus .stud-text{
-  transform: translateY(-100%);
-}
+
 
 /* <======================/STUDIES==========================> */
 /* <======================TEAMS==========================> */
@@ -531,99 +540,61 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   gap: 8px;
   justify-content: center;
 }
+
 .li-size{
+  position: relative;
 display: block;  
-
-
-}
-
-
-.li-position{
 overflow: hidden;
 
-
-
-  
 }
-/* .li-position:hover .qqq {
-  opacity: 1;
-} */
-.li-position:hover,
-.li-position:focus{
+.context {
+  position: absolute;
+  padding: 63px 24px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 294px;
+  font-size: 18px;
+  line-height: 1.55;
+  color: var(--background-color); 
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(140%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
+  
+ 
+}
+
+.li-size:hover .context,
+.li-size:focus .context{    
+transform: translateY(0);
+
+
+}
+.li-size:hover,
+.li-size:focus{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
-.position{
-  position: relative;
- overflow: hidden;
-
-}
-
-.overlay::before{
-  display: inline-block;
-  content: "";
-
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-
-
-  transform: translateY(140%);
-  transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.li-position:hover .overlay::before,
-.li-position:focus .overlay::before {
-  
-  transform: translateY(0);
-}
-
-
-
-.context{
-font-size: 18px;
-line-height: 1.55;
-
-
-
-}
-
-.shadow{
-  content: "";
-  position: absolute;
-  width: 322px;
-  height: 168px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,155%);
-  color: var(--background-color);
-transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-/* opacity: 0; */
-}
-.li-position:hover .shadow {
-  transform: translate(-50%, -50%);
-  /* opacity: 1; */
-}
-
-/* <======================/PORTFOLIO==========================> */
 
 
 .portfolio-grid {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  
+
+
 }
 
-
-
 .portfolio-img {
- padding: 20px 24px;
- border: 1px solid var(--portfolio-img);
- /* position: absolute;  */
- 
+  padding: 20px 24px;
+  border: 1px solid var(--portfolio-img);
+  z-index: 2;
+
+/* <======================/PORTFOLIO==========================> */
+
+
+
  
 }
 .bgd-img{
@@ -747,14 +718,15 @@ margin-right: 10px;}
   color: var(--icon-color);
   border: 1px solid var(--icon-color);
   border-radius: 4px;
+  transition-property: color, border-color  ;
+    transition-duration: 250ms;
+    transition-timing-function: var(--cubik);
 }
 .customer-logo{
   width: 106px;
   height: 60px;
   fill: currentColor;
-  transition-property: color,border;
-  transition-duration: 250ms;
-  transition-timing-function: var(--cubik);
+  
 }
 .customer-btn:hover,
 .customer-btn:focus{
