--- a/css/styles.css
+++ b/css/styles.css
@@ -534,6 +534,11 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* <======================/FOOTER==========================> */
 /* <======================PORTFOLIO==========================> */
+.portfolio-cart{
+  position: relative;
+  overflow: hidden;
+}
+
 .portfolio-btn-type {
   display: flex;
   margin-bottom: 50px;
